normal css added
Accept it

--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
 </head>
 
 <body>
+<style>body {
+background:grey;
+}
+p {
+  color:white;
+  background:blue;
+}
+</style>
+<p>This is a great site.</p>
 </body>
 </html>
